go-api-bluegreen/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: harbor.labaq.life/labaq/example-test03
        ports:
        - containerPort: 8080
          name: api
