go-api-bluegreen/svc-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-active
spec:
  selector:
    app: api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: api
