go-api-bluegreen/ing-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-active
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api-active.labaq.life
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-active
            port:
              number: 80
